# portfolio

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml
frontend/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agentic-ai/: page.tsx
frontend/app/blockchain/: page.tsx
frontend/app/webdev/: page.tsx
frontend/components/: GridBackground.tsx  Navbar.tsx  ProjectCard.tsx  SkillBadge.tsx  TerminalCard.tsx  ThemeToggle.tsx  TypewriterText.tsx
